<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/dark"
    tools:context=".screens.auth.LogInFragment">
    <LinearLayout
        android:paddingHorizontal="@dimen/padding_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="100dp"
            android:text="@string/LogIn"
            android:textAlignment="textStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Android.HeadLine" />
        <TextView
            android:layout_marginTop="28dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            style="@style/AuthTextView"
            />
        <EditText
            android:layout_marginTop="8dp"
            android:id="@+id/EmailEditText"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="@dimen/padding_small"
            android:paddingVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            style="@style/AuthEditText"
            />
        <TextView
            android:layout_marginTop="@dimen/margin_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Password"
            style="@style/AuthTextView"
            />
        <EditText
            android:layout_marginTop="8dp"
            android:id="@+id/PasswordEditText"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/padding_small"
            android:paddingVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/PasswordHint"
            style="@style/AuthEditText" />
        <Button
            android:id="@+id/LoginButton"
            android:layout_marginTop="24dp"
            android:text="@string/LogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CourseButton"/>
        <TextView
            android:id="@+id/NavigateToRegistration"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_gravity="center"
            android:textColorHighlight="@android:color/transparent"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_to_registration"
            android:textColor="@color/white"
            android:textAppearance="@style/Android.Button.Small"
            />
        <TextView
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/green"
            android:textAppearance="@style/Android.Button.Small"
            />
    </LinearLayout>
    <View
        android:layout_marginTop="32dp"
        android:background="@color/stroke"
        android:layout_height="1dp"
        android:layout_width="match_parent"/>
    <LinearLayout
        android:paddingHorizontal="@dimen/padding_small"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/OpenVkUrlButton"
            android:background="@drawable/vk_social_button_background"
            android:backgroundTint="@color/blue"
            android:src="@drawable/ic_vk"
            android:contentDescription="@string/icon_vk"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ImageButton
            android:id="@+id/OpenOkUrlButton"
            android:contentDescription="@string/icon_odnoklassniki"
            android:src="@drawable/ic_ok"
            android:layout_marginStart="8dp"
            android:background="@drawable/ok_social_button_background"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>