<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark"
    tools:context=".screens.OnBoardingFragment">

   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guideline"
       android:orientation="horizontal"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintGuide_percent="0.125" />

   <TextView
       android:id="@+id/OnBoardingHeadline"
       style="@style/Android.HeadLine"
       android:textAlignment="center"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:maxLines="2"
       android:text="@string/TitleOnBoarding"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="@+id/guideline" />


      <ImageView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/margin_large"
          android:contentDescription="@string/CoursesImage"
          android:src="@drawable/main_image_on_boarding"
          app:layout_constraintBottom_toTopOf="@+id/ContinueButton"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/OnBoardingHeadline"
          app:layout_constraintVertical_bias="0.0"/>

   <Button
       android:id="@+id/ContinueButton"
       style="@style/CourseButton"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/Continue"
       android:layout_marginHorizontal="@dimen/margin_small"
       android:layout_marginBottom="@dimen/margin_large"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>