<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/dark"
    tools:context=".screens.home.HomeScreenFragment">

    <LinearLayout
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_marginEnd="8dp"
            android:inputType="text"
            android:drawableStart="@drawable/ic_search"
            android:background="@drawable/search_field_background"
            android:backgroundTint="@color/dark_gray"
            android:hint="@string/search_field_hint"
            android:textColorHint="@color/white_opacity50"
            android:textAppearance="@style/Android.SearchView.Body"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="56dp"/>
        <ImageButton
            android:id="@+id/FilterButton"
            android:contentDescription="@string/filter"
            android:background="@drawable/filter_button_background"
            android:backgroundTint="@color/dark_gray"
            android:src="@drawable/ic_filter"
            android:layout_width="56dp"
            android:layout_height="56dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/SortedByPublishDate"
        android:layout_marginVertical="@dimen/margin_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_desc"
        android:textColor="@color/green"
        android:layout_gravity="end"
        android:drawablePadding="8dp"
        android:textAppearance="@style/Android.Button"
        android:drawableEnd="@drawable/ic_arrow_down_up" />
    <androidx.recyclerview.widget.RecyclerView
        android:paddingBottom="8dp"
        android:paddingHorizontal="@dimen/padding_small"
        android:id="@+id/CoursesRecyclerView"
        android:layout_width="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>